force-app/main/default/objects/EYI_Car_Park_Master__c/EYI_Car_Park_Master__c.object-meta.xml
<CustomObject>
    <label>Car Park Master</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Car Parking Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Park Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>