force-app/main/default/objects/EYI_Car_Park_Master__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Ground Podium Parking</fullName>
            </value>
            <value>
                <fullName>Mezzaine Podium Parking</fullName>
            </value>
            <value>
                <fullName>Ground Stilt Parking</fullName>
            </value>
            <value>
                <fullName>Mezzaine Stilt Parking</fullName>
            </value>
            <value>
                <fullName>Stack car parking</fullName>
            </value>
            <value>
                <fullName>Two wheeler parking</fullName>
            </value>
            <value>
                <fullName>Open car parking</fullName>
            </value>
            <value>
                <fullName>Tendom Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>