force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_4_Wheeler_Parking_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_4_Wheeler_Parking_Value__c</fullName>
    <formula>IF(
    TEXT(EYI_Category__c) = &quot;Additional&quot;,
    EYI_Built_up_Area__c * EYI_Ready_Recknor_Value__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 Wheeler Parking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>