force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Base_UOM__c.field-meta.xml
<CustomField>
    <fullName>EYI_Base_UOM__c</fullName>
    <label>Base UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>