force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Built_up_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Built_up_Area__c</fullName>
    <label>Built-up Area</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>