force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Car_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big Car</fullName>
            </value>
            <value>
                <fullName>Small Car</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>