force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Earmarked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>