force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Distruibution_Channel__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distruibution_Channel__c</fullName>
    <label>Distruibution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Sales</fullName>
            </value>
            <value>
                <fullName>Commercial Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>