force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_External_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_External_Material_Group__c</fullName>
    <label>External Material Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>