force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_GST_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Tax_Classification__c</fullName>
    <label>GST Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable under GST</fullName>
            </value>
            <value>
                <fullName>GST - Exempted</fullName>
            </value>
            <value>
                <fullName>Non Taxable GST</fullName>
            </value>
            <value>
                <fullName>Excisable with GST</fullName>
            </value>
            <value>
                <fullName>Bill of supply</fullName>
            </value>
            <value>
                <fullName>5% Scheme-New RERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>