force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Is_Syc__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Syc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Syc</label>
    <type>Checkbox</type>
</CustomField>