force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking Item Cat Grp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>