force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Lab_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lab_Office__c</fullName>
    <label>Lab/Office</label>
    <length>3</length>
    <type>Text</type>
</CustomField>