force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Group__c</fullName>
    <label>Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>