force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Status__c</fullName>
    <label>Material Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>