force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Parking_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Number__c</fullName>
    <externalId>true</externalId>
    <label>Parking Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>