force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Parking_Slot_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Slot_No__c</fullName>
    <label>Parking Slot No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>