force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Podium</fullName>
            </value>
            <value>
                <fullName>Mezzaine Podium</fullName>
            </value>
            <value>
                <fullName>Ground Stilt</fullName>
            </value>
            <value>
                <fullName>Covered Parking</fullName>
            </value>
            <value>
                <fullName>Open Car Parking</fullName>
            </value>
            <value>
                <fullName>Stack Car Parking</fullName>
            </value>
            <value>
                <fullName>Two Wheeler Parking</fullName>
            </value>
            <value>
                <fullName>VILLA V3</fullName>
                <label>Garage V3</label>
            </value>
            <value>
                <fullName>VILLA V1</fullName>
                <label>Garage V1</label>
            </value>
            <value>
                <fullName>VILLA V2</fullName>
                <label>Garage V2</label>
            </value>
            <value>
                <fullName>Measurement Podium</fullName>
                <isActive>false</isActive>
                <label>Measurement Podium</label>
            </value>
            <value>
                <fullName>Tanti Villa</fullName>
                <isActive>false</isActive>
                <label>Tanti Villa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>