force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Car Park Masters</relationshipLabel>
    <relationshipName>Car_Park_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>