force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Quote__c.field-meta.xml
<CustomField>
    <fullName>EYI_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Car Park Masters</relationshipLabel>
    <relationshipName>Car_Park_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>