force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Ready_Recknor_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ready_Recknor_Value__c</fullName>
    <formula>(EYI_Project__r.EYI_Ready_Recknkor__c * 0.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready Recknor Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>