force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Unit__c</fullName>
    <label>Sales Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>