force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Affordable_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Affordable_Type__c</fullName>
    <label>Affordable / Non-Affordable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Non Affordable Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>