force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Code_Park__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Code_Park__c</fullName>
    <label>Parking SAP Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>