force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Description__c</fullName>
    <label>SAP Description</label>
    <type>TextArea</type>
</CustomField>