force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Description__c</fullName>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>