force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Material_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saleable Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>