force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_SAP_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>