force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_TCS_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_TCS_Tax_Classification__c</fullName>
    <label>TCS Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCS Applicable</fullName>
            </value>
            <value>
                <fullName>TCS Not Applicable</fullName>
            </value>
            <value>
                <fullName>TDS Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>