force-app/main/default/objects/EYI_Car_Park_Master__c/fields/EYI_X_Plant_Mat_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_X_Plant_Mat_Status__c</fullName>
    <label>X-Plant Mat.Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked for procment/whse</fullName>
            </value>
            <value>
                <fullName>Blocked for task list/BOM</fullName>
            </value>
            <value>
                <fullName>MPN: Blocked f.BOM header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>