force-app/main/default/objects/EYI_Car_Park_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Category__c</columns>
    <columns>EYI_Car_Type__c</columns>
    <columns>EYI_Parking_Type__c</columns>
    <columns>EYI_Parking_Number__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Status__c</columns>
    <columns>EYI_Inventory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>