force-app/main/default/objects/EYI_Car_Park_Master__c/listViews/NOT_IS_SYC.listView-meta.xml
<ListView>
    <fullName>NOT_IS_SYC</fullName>
    <columns>NAME</columns>
    <columns>EYI_SAP_Affordable_Type__c</columns>
    <columns>EYI_Base_UOM__c</columns>
    <columns>EYI_Booking__c</columns>
    <columns>EYI_Car_Type__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Tower__c</columns>
    <columns>EYI_Inventory__c</columns>
    <columns>EYI_Is_Syc__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Project__c</field>
        <operation>contains</operation>
        <value>Golden</value>
    </filters>
    <filters>
        <field>EYI_Is_Syc__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Not Is Syc</label>
</ListView>